--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,6 +13,15 @@ h2 {
     font-size: 24px;
 }
 
+/* メニューバーを固定 */
+#menu {
+    width: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    z-index: 100;
+}
+
 
 /* メイン画像 */
 
