--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,18 +40,21 @@ h2 {
 /* 利用者登録情報の画像資料 */
 #patients_img {
     width: 150px;
+    border-radius: 10px;
 }
 
 /* ケース記録関連の画像　*/
 
 #case_photo {
-    width: 100px;
-    height: 80px;
+    width: 75px;
+    height: 40px;
+    border-radius: 10px;
 }
 
 #case_detail_photo {
     width: 300px;
     height: 200px;
+    border-radius: 10px;
 }
 
 /* ケース記録文字列 */
