--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,6 +37,14 @@ h2 {
 }
 
 /* 職員のプロフィール画像 */
+/* 職員一覧 */
+#image_icon_list {
+    width: 90px;
+    height: 80px;
+    border-radius: 10px;
+}
+
+/* 各職員のプロフィール */
 #image_icon {
     width: 200px;
     box-shadow: 0 0 10px #444444;
