--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,29 +26,33 @@ h2 {
 /* メイン画像 */
 #mainVisual {
     width: 370px;
-    margin: 40px auto;
+    margin: 20px auto;
 }
 
-#mainVisual img {
+#mainVisual img{
     width: 370px;
     height: 260px;
     border-radius: 10px;
     box-shadow: 0 0 10px #444444;
 }
 
-/* 職員のプロフィール画像 */
-/* 職員一覧 */
+/* 職員一覧のプロフィール画像 */
 #image_icon_list {
     width: 90px;
     height: 80px;
     border-radius: 10px;
 }
 
-/* 各職員のプロフィール */
+/* 各職員のプロフィール画像 */
 #image_icon {
     width: 200px;
     box-shadow: 0 0 10px #444444;
     border-radius: 10px;
+}
+
+/* 職員プロフィールの各コンテンツのサブタイトル*/
+#sub_title {
+    font-size: 24px;
 }
 
 
