--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,7 +7,6 @@ body {
 
 h1 {
     font-size: 30px;
-    color: red;
 }
 
 h2 {
@@ -82,4 +81,8 @@ h2 {
 #log_photo {
     width: 230px;
     height: 170px;
+}
+
+#title {
+    color: red !important;
 }
