各種編集項目にて、すでに登録されている画像プレビュー表示機能を追加

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,7 +38,12 @@ h2 {
 
 /* 画像登録のプレビュー表示 */
 #preview img {
-    width: 100%;
+    width: 200px;
+}
+
+/* 各種(職員プロフィール、利用者、相談記録、業務日誌)編集画面にて登録されている画像表示 */
+.now_image {
+    width: 200px;
 }
 
 
