不要なコードを削除

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,11 +17,10 @@ h2 {
 #menu {
     width: 100%;
     top: 0;
-    left: 0;
+    right: 0;
     position: fixed;
     z-index: 100;
 }
-
 
 /* メイン画像 */
 #mainVisual {
@@ -49,7 +48,7 @@ h2 {
 
 /* 職員一覧のプロフィール画像 */
 #image_icon_list {
-    width: 100px;
+    width: 80px;
     border-radius: 10px;
 }
 
