--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,7 +13,7 @@ h2 {
     font-size: 22px;
 }
 
-/* メニューバーを固定 */
+/* ナビゲーション関連 */
 #menu {
     width: 100%;
     top: 0;
@@ -40,16 +40,9 @@ h2 {
     width: 200px;
 }
 
-/* 各種(職員プロフィール、利用者、相談記録、業務日誌)編集画面にて登録されている画像表示 */
+/* 各種(職員プロフィール、利用者、相談記録、業務日誌)編集画面にて、すでに登録されている画像表示 */
 .now_image {
     width: 200px;
-}
-
-
-/* 職員一覧のプロフィール画像 */
-#image_icon_list {
-    width: 100px;
-    border-radius: 10px;
 }
 
 /* 各職員のプロフィール画像 */
@@ -63,7 +56,6 @@ h2 {
 #sub_title {
     font-size: 24px;
 }
-
 
 /* 利用者登録情報の画像資料 */
 #patients_img {
@@ -79,7 +71,7 @@ h2 {
     width: 200px;
 }
 
-/* 相談記録文字列 */
+/* 相談記録の文字列 */
 #case {
     text-align: left;
 }
